Curriculum Entity, Repository, Resource, Service and Instantiation config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=curriculumMongoDb
+spring.data.mongodb.uri=mongodb://root:123@localhost:28017/curriculum_mongo?authSource=admin
